--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,7 +20,7 @@
 
 			<hr />
 
-			<h2>Friends lesson plans</h2>
+			<h2>Friends</h2>
 			<ul id="friends-container">
 				<!-- <li>
 					<div class="friend-name">
