--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,10 +6,10 @@
 		<h1>ZUTNIK PLAN</h1>
 		<div class="data-container">
 			<div id="user-container">
-				<h2>Your lesson plan</h2>
-				<ul>
+				<h2>Your plan</h2>
+				<ul id="you-container">
 					<li>
-						<div id="you-container" class="flex">
+						<div class="flex">
 							<input placeholder="index..." id="user-input" />
 							<button id="user-submit-btn">Select</button>
 							<button>Save</button>
@@ -21,18 +21,7 @@
 			<hr />
 
 			<h2>Friends</h2>
-			<ul id="friends-container">
-				<!-- <li>
-					<div class="friend-name">
-						<h3 contenteditable="true">John</h3>
-					</div>
-					<div class="friend-index">
-						<input type="text" />
-						<button>Select</button>
-						<button>Delete</button>
-					</div>
-				</li> -->
-			</ul>
+			<ul id="friends-container"></ul>
 
 			<hr />
 
